--- a/resume.html
+++ b/resume.html
@@ -5,16 +5,25 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!--
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" type="text/css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
+    -->
+
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
 		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
 	<!-- Hover psuedo class -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" />
-	<!-- project css-->
-	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+	
 	<!-- font awsome-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
+    <!--
 	<script src="https://kit.fontawesome.com/169cf7da54.js" crossorigin="anonymous"></script>
-	<title>Mike Green</title>
+    -->
+    <!-- project css-->
+	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+	<title>Mike Green CV</title>
 </head>
 
 <body>
@@ -59,34 +68,149 @@
 
 	</header>
 
-	<section>
-		Hello
+	<section class="container-fluid">
+		<div class="row">
+			<div class="col-md-4 bg-color-work-history section-column">
+				<div class="row">
+					<div class="col-12">
+						<h3 class="history-heading uppercase">Work History</h3>
+					</div>
+				</div>
+				<div class="history-items">
+					<div class="timeline-item" data-dates="06/1987 - 05/1996">
+						<h4>Cambridge City Council</h4>
+						<p>Analyst Programmer</p>
+					</div>
+					<div class="timeline-item" data-dates="06/1996 - 05/2001">
+						<h4>Cap Gemini</h4>
+						<p>IT Technical Consultant</p>
+					</div>
+					<div class="timeline-item" data-dates="06/2001 - 04/2014">
+						<h4>Travelex</h4>
+						<p>IT Consultant</p>
+					</div>
+					<div class="timeline-item" data-dates="01/2015 - 01/2020">
+						<h4>Thomas Cook Group</h4>
+						<p>Service Centre Operations Analyst</p>
+					</div>
+					<div class="timeline-item" data-dates="02/2020 - Present">
+						<h4>Self Employed</h4>
+						<p>Full Stack Web Developer Training</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-8 bg-color-three-reasons section-column">
+				<div class="row">
+					<div class="col">
+						<h3 class="section-heading uppercase">My Skills</h3>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+						<div class="row">
+							<div class="col-2">
+								<i class="three-reasons-icon fa fa-tv" aria-hidden="true"></i>
+							</div>
+							<div class="col-10">
+								<h4 class="three-reasons-heading uppercase">Front End</h4>
+								<p>
+									I'm a skilled Jack-of-all-trades with a wealth of diverse life and technical
+									experience that I bring to every project.
+								</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+						<div class="row">
+							<div class="col-2">
+								<i class="three-reasons-icon fa fa-gears" aria-hidden="true"></i>
+							</div>
+							<div class="col-10">
+								<h4 class="three-reasons-heading uppercase">Back End</h4>
+								<p>
+									I ensure the application has all the checkpoints required to maintain reliable
+									service.
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="row progress-section">
+					<div class="col">
+						<div class="progress">
+							<div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0"
+								aria-valuemax="100" style="width:50%;">
+								<span class="sr-only">50% complete</span>
+							</div>
+							<span class="progress-type">HTML / HTML5</span>
+						</div>
+						<div class="progress">
+							<div class="progress-bar bg-success" role="progressbar" aria-valuenow="40" aria-valuemin="0"
+								aria-valuemax="100" style="width:40%;">
+								<span class="sr-only">40% complete</span>
+							</div>
+							<span class="progress-type">CSS / CSS3</span>
+						</div>
+						<div class="progress">
+							<div class="progress-bar bg-info" role="progressbar" aria-valuenow="10" aria-valuemin="0"
+								aria-valuemax="100" style="width:10%;">
+								<span class="sr-only">10% complete</span>
+							</div>
+							<span class="progress-type">JavaScript / jQuery</span>
+						</div>
+						<div class="progress">
+							<div class="progress-bar bg-warning" role="progressbar" aria-valuenow="5" aria-valuemin="0"
+								aria-valuemax="100" style="width:5%;">
+								<span class="sr-only">85% complete</span>
+							</div>
+							<span class="progress-type">Django / Python</span>
+						</div>
+						<div class="progress">
+							<div class="progress-bar bg-danger" role="progressbar" aria-valuenow="40" aria-valuemin="0"
+								aria-valuemax="100" style="width:40%;">
+								<span class="sr-only">40% complete</span>
+							</div>
+							<span class="progress-type">SQL / NoSQL</span>
+						</div>
+						<div class="progress">
+							<div class="progress-bar bg-dark" role="progressbar" aria-valuenow="90" aria-valuemin="0"
+								aria-valuemax="100" style="width:90%;">
+								<span class="sr-only">90% complete</span>
+							</div>
+							<span class="progress-type">COBOL</span>
+						</div>
+					</div>
+				</div>
+			</div>
+
+
+		</div>
 	</section>
 
 	<footer class="container-fluid">
 		<div id="footer-details" class="row">
 			<div class="col-sm-4">
 				<h5 class="uppercase general-sub">About</h5>
-                <p class="inline-block">Application support and developer in COBOL,perl,korn shell and SQL </p>
+				<p class="inline-block">Application support and developer in COBOL,perl,korn shell and SQL </p>
 			</div>
 			<div class="col-sm-4">
 				<h5 class="uppercase general-sub">Download</h5>
-                <p class="inline-block">Need a printable CV?</p>
-                <a href="#" target="_blank" class="cv-pdf" >
-                <i class="fa fa-download" aria-hidden="true"></i>
-                </a>
+				<p class="inline-block">Need a printable CV?</p>
+				<a href="#" target="_blank" class="cv-pdf">
+					<i class="fa fa-download" aria-hidden="true"></i>
+				</a>
 
 			</div>
 			<div class="col-sm-4">
 				<h5 class="uppercase general-sub">Social</h5>
-                 <ul class="list-inline social-links">
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-facebook" aria-hidden="true"></i>
-                            <span class="sr-only">Facebook</span>
-                        </a>
-                    </li>
-                    <!-- Dont have Twitter account 
+				<ul class="list-inline social-links">
+					<li class="list-inline-item">
+						<a target="_blank" href="#">
+							<i class="fa fa-facebook" aria-hidden="true"></i>
+							<span class="sr-only">Facebook</span>
+						</a>
+					</li>
+					<!-- Dont have Twitter account 
                     <li class="list-inline-item">
                         <a target="_blank" href="#">
                             <i class="fa fa-twitter" aria-hidden="true"></i>
@@ -94,13 +218,13 @@
                         </a>
                     </li>
                     -->
-                    <li class="list-inline-item">
-                        <a target="_blank" href="www.linkedin.com/in/mike-green-4323a929">
-                            <i class="fa fa-linkedin" aria-hidden="true"></i>
-                            <span class="sr-only">LinkedIn</span>
-                        </a>
-                    </li>
-                    <!-- Dont have Pinterest account 
+					<li class="list-inline-item">
+						<a target="_blank" href="www.linkedin.com/in/mike-green-4323a929">
+							<i class="fa fa-linkedin" aria-hidden="true"></i>
+							<span class="sr-only">LinkedIn</span>
+						</a>
+					</li>
+					<!-- Dont have Pinterest account 
                     <li class="list-inline-item">
                         <a target="_blank" href="#">
                             <i class="fa fa-pinterest" aria-hidden="true"></i>
@@ -108,7 +232,7 @@
                         </a>
                     </li>
                     -->
-                    <!-- Don't have Instagram account 
+					<!-- Don't have Instagram account 
                     <li class="list-inline-item">
                         <a target="_blank" href="#">
                             <i class="fa fa-instagram" aria-hidden="true"></i>
@@ -116,13 +240,13 @@
                         </a>
                     </li>
                     -->
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-youtube" aria-hidden="true"></i>
-                            <span class="sr-only">YouTube</span>
-                        </a>
-                    </li>
-                </ul>
+					<li class="list-inline-item">
+						<a target="_blank" href="#">
+							<i class="fa fa-youtube" aria-hidden="true"></i>
+							<span class="sr-only">YouTube</span>
+						</a>
+					</li>
+				</ul>
 			</div>
 		</div>
 	</footer>
