--- a/github.html
+++ b/github.html
@@ -24,7 +24,7 @@
             <div class="col-md-8">
                 <div class="row bg-color-name-title">
                     <div class="heading">
-                        <h1 class="name">Rosie Odenkirk</h1>
+                        <h1 class="name">Mike Green</h1>
                         <h2 class="title"> Full Stack Developer</h2>
                     </div>
                 </div>
