--- a/interests.html
+++ b/interests.html
@@ -21,7 +21,7 @@
             <div class="col-md-8">
                 <div class="row bg-color-name-title">
                     <div class="heading">
-                        <h1 class="name">Rosie Odenkirk</h1>
+                        <h1 class="name">Mike Green</h1>
                         <h2 class="title"> Full Stack Developer</h2>
                     </div>
                 </div>
@@ -144,7 +144,7 @@
                 <h5 class="uppercase general-sub">Download My CV</h5>
                 <p class="inline-block">
                     Need a printable version of my CV? Download it here.
-                    <a href="assets/cv/sample-cv.pdf" target="_blank" class="cv-pdf"><i class="fa fa-download" aria-hidden="true"></i></a>
+                    <a href="assets/cv/MikeGreen_CV.pdf" target="_blank" class="cv-pdf"><i class="fa fa-download" aria-hidden="true"></i></a>
                 </p>
             </div>
             <div class="col-sm-4">
