--- a/interests.html
+++ b/interests.html
@@ -160,6 +160,25 @@
             </div>
         </div>
     </footer>
+    <script>
+        var APIkey = "AIzaSyAJPeup6A6TWXPWRUel7kGJ08tJ-ehMgLY";
+    </script>
+        <script>
+        function initMap() {
+            var map = new google.maps.Map(document.getElementById("map"), {
+                zoom: 3,
+                center: {
+                    lat: 46.619261,
+                    lng: -33.134766
+                }
+            });
+        }
+    </script>
+
+    <script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js"></script>
+    <script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAJPeup6A6TWXPWRUel7kGJ08tJ-ehMgLY&callback=initMap">
+    </script>
 </body>
 
 </html>
