Email JS linked to contact form

--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,15 @@
 	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
 
 	<title>Contact Mike Green</title>
+
+	<!-- emailJS service-->
+	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"></script>
+	<script type="text/javascript">
+		(function(){
+                emailjs.init("user_RPR7eK8NiQDQX1usQ8NRw");
+        })();
+	</script>
+
 </head>
 
 <body>
@@ -68,15 +77,15 @@
 				<h3 class="contact-heading uppercase text-center">Got a project in mind?</h3>
 				<h5 class="uppercase text-center">Let's work on this together.</h5>
 				<div class="center-form">
-					<form>
-                       <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required />
-                        <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required />
-                        <textarea rows="5" name="projectsummary" id="projectsummary" class="form-control" placeholder="Project description" required></textarea>
-                        <div class="form-row text-center">
-                            <div class="col">
-                                <button type="submit" class="btn btn-secondary">Send Project Request</button>
-                            </div>
-                        </div>
+					<form onsubmit="return sendEmail(this);">
+						<input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required />
+						<input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required />
+						<textarea rows="5" name="projectsummary" id="projectsummary" class="form-control" placeholder="Project description" required></textarea>
+						<div class="form-row text-center">
+							<div class="col">
+								<button type="submit" class="btn btn-secondary">Send Project Request</button>
+							</div>
+						</div>
 					</form>
 				</div>
 			</div>
@@ -146,7 +155,7 @@
 			</div>
 		</div>
 	</footer>
-
+    <script src="assets/js/sendEmail.js" type="text/javascript"> </script>
 </body>
 
 </html>
