--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 				<h5 class="uppercase general-sub">Social</h5>
 				<ul class="list-inline social-links">
 					<li class="list-inline-item">
-						<a target="_blank" href="#">
+						<a target="_blank" href="https://www.facebook.com/m.d.j.green">
 							<i class="fa fa-facebook" aria-hidden="true"></i>
 							<span class="sr-only">Facebook</span>
 						</a>
